--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,6 @@ set (Waves_VERSION_MAJOR 1)
 set (Waves_VERSION_MINOR 0)
 
 add_subdirectory (source)
-add_subdirectory (test)
+add_subdirectory (unity)
+add_subdirectory (autotest)
 add_subdirectory (demo)
